# pyfastgrep

./: .gitignore  Cargo.toml  DEVELOPMENT.md  FUTURE_IMPROVEMENTS.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  lib.rs
pyfastgrep/: __init__.py
python/pyfastgrep/: __init__.py
src/: lib.rs
tests/: mandatory_tests.py
