[package]
name = "pyfastgrep"
version = "0.1.1"
edition = "2021"

[workspace]
members = ["crates/core", "cli"]
resolver = "2"

[lib]
name = "pyfastgrep"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pyfastgrep-core = { path = "crates/core" }

serde_json = "1.0"
