[package]
name = "pyfastgrep-core"
version = "0.1.1"
edition = "2021"

[dependencies]
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
rayon = "1.8"
crossbeam-channel = "0.5"
globset = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
serde = { version = "1.0", features = ["derive"] }
